--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   <body>
     <div class="input-box">
       <input type="password" placeholder="password" />
+      <img src="media/eye-close.png" alt="" />
     </div>
   </body>
 </html>
