--- a/index.html
+++ b/index.html
@@ -8,8 +8,10 @@
   </head>
   <body>
     <div class="input-box">
-      <input type="password" placeholder="password" />
-      <img src="media/eye-close.png" alt="" />
+      <input type="password" placeholder="password" id="password" />
+      <img src="media/eye-close.png" id="eyeIcon" />
     </div>
+
+    <script src="script.js"></script>
   </body>
 </html>
