--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <body>
     <div class="input-box">
       <input type="password" placeholder="password" id="password" />
-      <img src="media/eye-close.png" id="eyeIcon" />
+      <img src="media/eye-close.png" id="eyeIcon" onclick="toggleIcon()" />
     </div>
 
     <script src="script.js"></script>
